--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="main">
-      <div class="other_cut">
+      <div class="title_other">
         <h2>その他の素材を切る道具</h2>
       </div>
       <div class="content">
