--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
         <ul class="wood">
           <li><span class="mgr1">no.1</span><span class="mgr2">発泡スチロールの3次元曲面をつくる</span><a href="http://www.matterdesignstudio.com/periscope">Foam Tower　(Matter Design, 2010)</a></li>
+          <li><span class="mgr1">no.2</span><span class="mgr2">発泡スチロールの3次元曲面をつくる</span><a href="https://www.semanticscholar.org/paper/Digital-Fabrication%3A-Manufacturing-Architecture-in-Kolarevic/b459061c59cb92e7a1a037ab6326576bb920d29f">Neuer Zollhof (F. O. Gehry, 1999)</a></li>
+          <li><span class="mgr1">no.3</span><span class="mgr2">発泡スチロールの3次元曲面をつくる</span><a href="https://www.researchgate.net/publication/334469158_Digital_Proceeding_of_ICOCEE_-CAPPADOCIA2017_New_Construction_Methods_and_Hybrid_Tectonics_Robotics_in_Architecture">BMW Bubble Pavilion (B. Franken, 2000)</a></li>
         </ul>
       </div>
     </div>
