--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
         <ul class="wood">
-          <li><span class="mgr1">no.1</span><span class="mgr2">竹を切削する</span><a href="https://redshift.autodesk.co.jp/bamboo-construction/">ポリカーボネート押出成形機</a></li>
+          <li><span class="mgr1">no.1</span><span class="mgr2">竹を3次元的に切削する</span><a href="https://redshift.autodesk.co.jp/bamboo-construction/">Luum Temple (CO-LAB Design Office, 2019)</a></li>
         </ul>
       </div>
     </div>
